// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`.not.toBeValidDate > fails when given a valid date value 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeValidDate()[22m

Expected value to not be a valid date received:
  [31m2018-01-01T13:00:00.000Z[39m"
`;

exports[`.toBeValidDate > fails when given an invalid date 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeValidDate()[22m

Expected value to be a valid date received:
  [31mDate { NaN }[39m"
`;

exports[`.toBeValidDate > fails when not given non-date values 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeValidDate()[22m

Expected value to be a valid date received:
  [31m1[39m"
`;
